src/objects/AutoNumber__c.object
<CustomObject>
    <description>Stores information related to custom auto-number functionality.</description>
    <label>AutoNumber</label>
    <nameField>
        <label>Auto-Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Format__c</fullName>
        <description>The format for the auto-numbered field including number of digits and, if desired, a prefix.</description>
        <inlineHelpText>The format for the auto-numbered field including number of digits and, if desired, a prefix.</inlineHelpText>
        <label>Display Format</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>The API name of the field that contains the auto-number.</description>
        <inlineHelpText>The API name of the field that contains the auto-number.</inlineHelpText>
        <label>Field API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the auto-number format is active.</description>
        <inlineHelpText>When selected, the auto-number format is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Used_Number__c</fullName>
        <inlineHelpText>The highest auto-number used for this format.</inlineHelpText>
        <label>Max Used Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>The API name of the object for the auto-number.</description>
        <inlineHelpText>The API name of the object for the auto-number.</inlineHelpText>
        <label>Object API Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Number__c</fullName>
        <description>The first number in the auto-numbered sequence.</description>
        <inlineHelpText>The first number in the auto-numbered sequence.</inlineHelpText>
        <label>Starting Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>